Created Handlers\Event.js, i have added an event handler. Updated bot.js, init event handler, Create Events\Client\ready.js, The ready event, Created Validation\EventName.js, All events that discord allow, added the ascii-table package and glob package.

--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "homepage": "https://github.com/Imbored24/My-First-Discord-JS-Bot#readme",
   "dependencies": {
-    "discord.js": "^13.6.0"
+    "ascii-table": "^0.0.9",
+    "discord.js": "^13.6.0",
+    "glob": "^7.2.0"
   }
 }
