--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "ascii-table": "^0.0.9",
     "discord.js": "^13.6.0",
-    "glob": "^7.2.0"
+    "glob": "^7.2.0",
+    "ms": "^2.1.3"
   }
 }
